<?xml version="1.0" encoding="utf-8"?>
<!--
  @package     Localzet Meet
  @link        https://meet.localzet.com
  @link        https://github.com/localzet-dev/Meet

  @author      Ivan Zorin <creator@localzet.com>
  @copyright   Copyright (c) 2018-2024 Zorin Projects S.P.
  @license     https://www.gnu.org/licenses/agpl-3.0 GNU Affero General Public License v3.0

               This program is free software: you can redistribute it and/or modify
               it under the terms of the GNU Affero General Public License as published
               by the Free Software Foundation, either version 3 of the License, or
               (at your option) any later version.

               This program is distributed in the hope that it will be useful,
               but WITHOUT ANY WARRANTY; without even the implied warranty of
               MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
               GNU Affero General Public License for more details.

               You should have received a copy of the GNU Affero General Public License
               along with this program.  If not, see <https://www.gnu.org/licenses/>.

               For any questions, please contact <creator@localzet.com>
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AuthenticationActivity">

    <com.google.android.material.chip.Chip
        android:id="@+id/chipSkip"
        style="@style/Widget.MaterialComponents.Chip.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipBackgroundColor="@color/transparentColor"
        android:textColor="?attr/colorPrimary"
        app:chipStrokeWidth="1dp"
        app:chipCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:chipStrokeColor="?attr/colorPrimary"
        android:text="@string/all_skip"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_app_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/text_size_xxl"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvAppTagline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppTagline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_tagline"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnSignInGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInGoogle"
        style="@style/OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:text="@string/authentication_sign_in_google"
        app:icon="@drawable/googleg_standard_color_18"
        app:layout_constraintBottom_toTopOf="@+id/btnSignInEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppTagline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInEmail"
        style="@style/OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/authentication_sign_in_email"
        app:icon="@drawable/ic_email"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSignInGoogle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnSignInGoogle"
        app:layout_constraintTop_toBottomOf="@+id/btnSignInGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>