<?xml version="1.0" encoding="utf-8"?>
<!--
  @package     Localzet Meet
  @link        https://meet.localzet.com
  @link        https://github.com/localzet-dev/Meet

  @author      Ivan Zorin <creator@localzet.com>
  @copyright   Copyright (c) 2018-2024 Zorin Projects S.P.
  @license     https://www.gnu.org/licenses/agpl-3.0 GNU Affero General Public License v3.0

               This program is free software: you can redistribute it and/or modify
               it under the terms of the GNU Affero General Public License as published
               by the Free Software Foundation, either version 3 of the License, or
               (at your option) any later version.

               This program is distributed in the hope that it will be useful,
               but WITHOUT ANY WARRANTY; without even the implied warranty of
               MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
               GNU Affero General Public License for more details.

               You should have received a copy of the GNU Affero General Public License
               along with this program.  If not, see <https://www.gnu.org/licenses/>.

               For any questions, please contact <creator@localzet.com>
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupJoinMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="ivJoinMeeting, tilCodeJoinMeeting, btnJoinMeeting" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupCreateMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="ivCreateMeeting, tilCodeCreateMeeting, btnCreateMeeting" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMeetingHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                style="@style/ClickableImageView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_history" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_profile"
                style="@style/ClickableImageView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/tgMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:checkedButton="@id/btnToggleJoinMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:singleSelection="true">

        <Button
            android:id="@+id/btnToggleJoinMeeting"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_join_meeting" />

        <Button
            android:id="@+id/btnToggleCreateMeeting"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_create_meeting" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivJoinMeeting"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/tilCodeJoinMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tgMeeting"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_meeting_main" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCodeJoinMeeting"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/main_enter_meeting_code"
        app:counterEnabled="true"
        app:endIconDrawable="@drawable/ic_clipboard"
        app:endIconMode="custom"
        app:layout_constraintBottom_toTopOf="@+id/btnJoinMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivJoinMeeting">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCodeJoinMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnJoinMeeting"
        style="@style/FilledButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/main_btn_join_meeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCodeJoinMeeting" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCreateMeeting"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/tilCodeCreateMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tgMeeting"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_meeting_main" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCodeCreateMeeting"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/main_meeting_code"
        app:counterEnabled="true"
        app:endIconDrawable="@drawable/ic_share"
        app:endIconMode="custom"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCreateMeeting">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCodeCreateMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateMeeting"
        style="@style/FilledButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/main_btn_create_meeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCodeCreateMeeting" />
</androidx.constraintlayout.widget.ConstraintLayout>